-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 12.0.0-beta1
-
None
-
-
311fe1bf2 (12.0)
I tried out snapshots/qtcreator/12.0/12.0.0-beta1/51/ and I noticed that the settings for C++ Beautifier are not stored correctly in qtcreator.ini (I checked the ini file, its written wrong there).
I set it to Clang Format, and it reverts it to Artistic Style. It also reverts my selection for 'Use predefined style' as 'File' back to 'LLVM'. This renders the Beautifier unusable.