Beautifier: Fix saving of settings

Applying didn't actually apply the new values.

Fixes: QTCREATORBUG-29586
Change-Id: If9416cc18fffd269f6ca3d27523aa138e6f91d7a
Reviewed-by: hjk <hjk@qt.io>