src/plugins/beautifier/artisticstyle/artisticstyle.cpp
@@ -221,6 +221,7 @@ public:
 
         setOnApply([&s, configurations] {
             s.customStyle.setValue(configurations->currentConfiguration());
+            settings().apply();
             s.save();
         });
 
